--- a/DatabaseProjectFinal/nbproject/private/private.properties
+++ b/DatabaseProjectFinal/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\nWhite16\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\ethan\\AppData\\Roaming\\NetBeans\\21\\build.properties
