--- a/DatabaseProjectFinal/nbproject/project.properties
+++ b/DatabaseProjectFinal/nbproject/project.properties
@@ -39,7 +39,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector.jar}:\
-    ${file.reference.mysql-connector-java-8.0.16.jar}
+    ${file.reference.mysql-connector-java-8.0.16.jar}:\
+    ${libs.MySQL_JDBC_Driver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
